Tek3/DOP/bernstein/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - poll
            topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      containers:
        - name: poll
          image: epitechcontent/t-dop-600-poll:k8s
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "128M"
