Tek3/DOP/bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
spec:
  selector:
    app: poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
