Tek3/DOP/bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
