Tek3/DOP/bernstein/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poll-service
                port:
                  number: 80
